fix 19: make progress bar visible

--- a/Projects/Debugging Project/style.css
+++ b/Projects/Debugging Project/style.css
@@ -364,6 +364,12 @@ fix width of buttons */
 }
 
 .progress-bar {
+  /* 19.
+  progress bar isn't visible
+  fix: 
+  set height*/
+  height: 5px;
+  /*  */
   width: 100%;
   background-color: #e9ecef;
   border-radius: 4px;
